tests/mvar/reject/return_and_access.nos
# expect: error
# Return mvar value after calling function that modifies it

mvar result: Int = 0

compute() = {
    result = 42
    result
}

get_computed() = {
    # UNSAFE: calls compute which writes result, then reads result
    compute()
    result
}

main() = {
    get_computed()
}
